adjust dark mode + fix some colors details

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -37,16 +37,25 @@
     --space-xs-xs: clamp(0.6875rem, 0.663rem + 0.1087vi, 0.75rem);
   
     /* Colors */
-    --color-white: #FFFFFF;
-    --color-gray: #FCFBFB;
-    --color-gray-dark: #F5F5F5;
-    --color-gray-darker: #e7e7e9;
-    --color-gray-darkest: #dcdbdb;
+    --color-white: #FCFCFC;
+    --color-gray: #F5F5F5;
+    --color-gray-dark: #EBEBEB;
+    --color-gray-darker: #E0E0E0;
+    --color-gray-darkest: #D6D6D6;
     --color-highlight: #7e7d7d;
     --color-lightning: #1375f5;
     --color-black-lighter: #4c4c4c;
     --color-black: #252525;
   }
+
+  /* html {
+    -ms-overflow-style: none;
+    scrollbar-width: none; 
+    overflow-y: scroll;
+    &::-webkit-scrollbar {
+        display: none;
+    }
+  } */
 
 body {
     background-color: var(--color-gray);
@@ -62,20 +71,16 @@ body {
 
 @media (prefers-color-scheme: dark) {
     :root {
-        --color-white: #000000;
-        --color-gray: #252525;
-        --color-gray-dark: #2f2f2f;
-        --color-gray-darker: #3c3c3c;
-        --color-gray-darkest: #4f4f4f;
+        --color-white: #141414;
+        --color-gray: #1F1F1F;
+        --color-gray-dark: #292929;
+        --color-gray-darker: #333333;
+        --color-gray-darkest: #3D3D3D;
         --color-highlight: #7e7d7d;
         --color-lightning: #1375f5;
         --color-black-lighter: #dcdbdb;
         --color-black: #FCFBFB;
     }
-    /* body {
-        background-color: var(--color-black);
-        color: var(--color-gray);
-    } */
 }
 
 p,
@@ -97,7 +102,6 @@ h3,
 h4, 
 h5, 
 h6 {
-    /* font-family: 'Neue Montreal', sans-serif; */
     font-weight: 500;
 }
 
@@ -105,7 +109,6 @@ h1 {
     font-size: var(--step-3);
     letter-spacing: calc(var(--step-4) * 0.5 / 100);
     line-height: 140%;
-    /* margin-top: var(--space-2xl); */
     margin-top: calc(var(--space-3xl) + var(--space-xs));
 }
 
@@ -188,7 +191,8 @@ ol {
 a {
     text-decoration-line: underline;
     text-decoration-style: dashed;
-    text-decoration-color: rgba(0, 0, 0, 0.4);
+    /* text-decoration-color: rgba(0, 0, 0, 0.4); */
+    text-decoration-color: var(--color-highlight);
     text-decoration-thickness: 1px;
     text-underline-offset: 5px;
     transition: all ease-out 0.3s;
@@ -205,7 +209,8 @@ a {
         background-repeat: no-repeat;
         background-size: contain;
         display: inline-block;
-        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 12 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.5 3C3.22386 3 3 3.22386 3 3.5C3 3.77614 3.22386 4 3.5 4V3ZM8.5 3.5H9C9 3.22386 8.77614 3 8.5 3V3.5ZM8 8.5C8 8.77614 8.22386 9 8.5 9C8.77614 9 9 8.77614 9 8.5H8ZM2.64645 8.64645C2.45118 8.84171 2.45118 9.15829 2.64645 9.35355C2.84171 9.54882 3.15829 9.54882 3.35355 9.35355L2.64645 8.64645ZM3.5 4H8.5V3H3.5V4ZM8 3.5V8.5H9V3.5H8ZM8.14645 3.14645L2.64645 8.64645L3.35355 9.35355L8.85355 3.85355L8.14645 3.14645Z' fill='%23252525'%3E%3C/path%3E%3C/svg%3E");
+        --color-black: #252525;
+        background-image: url("/img/external.svg");
     }
     &[href^="https://juanberrios.com"]::after,
     &[href^="https://www.juanberrios.com"]::after {
