--- a/src/styles/commandMenu.css
+++ b/src/styles/commandMenu.css
@@ -28,7 +28,8 @@
     [cmdk-input] {
       width: 100%;
       padding: calc(var(--space-2xs) + var(--space-xs)) var(--space-m);
-      border-bottom: solid 1px rgba(0, 0, 0, 0.1);
+      background-color: var(--color-gray);
+      border-bottom: solid 1px var(--color-gray-dark);
       color: var(--color-highlight);
       outline: none;
       border-top-left-radius: var(--space-2xs);
@@ -37,7 +38,7 @@
       border-bottom-right-radius: 0; /* to fix Safari Mobile border */
     }
     [cmdk-list] {
-      background-color: var(--color-white);
+      background-color: var(--color-gray);
       width: 100%;
       border-bottom-left-radius: var(--space-2xs);
       border-bottom-right-radius: var(--space-2xs);
@@ -64,9 +65,6 @@
       display: flex;
       justify-content: flex-start;
       align-items: center;
-      &[aria-selected="true"] {
-        background-color: var(--color-gray-darkest);
-      }
       svg {
         margin-right: var(--space-2xs);
         opacity: 0.5;
@@ -83,7 +81,13 @@
         border-radius: var(--space-3xs);
         padding: var(--space-3xs) var(--space-2xs);
         color: var(--color-highlight);
-        border: solid 1px rgba(0, 0, 0, 0.1);
+        border: solid 1px var(--color-gray-darkest);
+      }
+      &[aria-selected="true"] {
+        background-color: var(--color-gray-darkest);
+        .tag {
+          border: solid 1px var(--color-highlight);
+        }
       }
     }
     [cmdk-empty] {
