--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,6 +1,7 @@
 .footer {
     margin-top: var(--space-3xl) !important;
     padding-bottom: var(--space-2xl);
+    color: var(--color-black-lighter);
     .footer-content {
         display: flex;
         align-items: center;
@@ -8,7 +9,8 @@
         font-size: var(--step--1);
         padding-top: var(--space-m);
         border-top: solid 1px rgba(0, 0, 0, 0.1);
-        opacity: 0.6;
+        border-top: solid 1px var(--color-gray-darker);
+        /* opacity: 0.6; */
         .made {
             display: flex;
             align-items: center;
